2007-12-08  Jim Evins  <evins@snaught.com>

	* TODO:
		More prep for 2.1.5/2.2.0.

2007-12-08  Jim Evins  <evins@snaught.com>

	* NEWS:
	* README:
	* TODO:
	* configure.in:
		Preparation for 2.1.5.

2007-12-08  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/db.sgml:
	* docs/libglabels/tmpl/str.sgml:
	* libglabels/str.c:
		Documentation cleanup for libglabels.

2007-11-29  Jim Evins  <evins@snaught.com>

	* libglabels/db.h:
	* libglabels/db.c:
		Added lgl_db_does_template_name_exist().
		In lgl_db_lookup_template_from_name() substitute brand/part of new template from
		requested alias.
	* src/prefs-model.c:
		Proof read recent templates -- make sure they still exist.
	* src/wdgt-media-select.c:
		Default to "search all templates" tab if no recent templates found.

2007-11-28  Jim Evins  <evins@snaught.com>

	* data/glade/wdgt-media-select.glade:
	* src/wdgt-media-select.c:
		Added tabbed notebook to allow selection of recent template versus searching the
		entire database.
	

2007-11-26  Jim Evins  <evins@snaught.com>

	* libglabels/Makefile.am:
	* libglabels/libglabels.h:
		Make str.h public.
	* src/label.c:
	* src/prefs-dialog.c:
	* src/prefs-model.c:
	* src/prefs-model.h:
	* src/prefs.c:
	* src/prefs.h:
		Added tracking of recently used templates.

2007-11-20  Jim Evins  <evins@snaught.com>

	* data/glade/template-designer.glade:
	* src/template-designer.c:
		Added warning icon when match brand and part match an existing template.

2007-11-18  Jim Evins  <evins@snaught.com>

	* libglabels/Makefile.am:
	* libglabels/str.h:
	* libglabels/str.c:
		Added lgl_str_utf8_casecmp().
	* libglabels/libglabels-private.h:
		Use lgl_str_utf8_casecmp() for UTF8_EQUAL macro -- do case insensitive comparisons.
	* libglabels/db.c: (lgl_db_get_brand_list):